--- a/3.html
+++ b/3.html
@@ -13,3 +13,57 @@
 <script src="live2d/pio.js"></script>
 <script src="live2d/pio_sdk4.js"></script>
 <script src="live2d/load.js"></script>
+
+
+
+<style>
+    #control {
+        position: absolute;
+        top: 8px;
+        left: 24px;
+        color: #fff;
+        font-size: 18px;
+    }
+</style>
+<div id="control"></div>
+
+<script>
+    function addFrame(model) {
+        const foreground = PIXI.Sprite.from(PIXI.Texture.WHITE);
+        foreground.width = model.internalModel.width;
+        foreground.height = model.internalModel.height;
+        foreground.alpha = 0.2;
+
+        model.addChild(foreground);
+
+        checkbox("Model Frames", checked => foreground.visible = checked);
+    }
+
+    function addHitAreaFrames(model) {
+        const hitAreaFrames = new live2d.HitAreaFrames();
+
+        model.addChild(hitAreaFrames);
+
+        checkbox("Hit Area Frames", checked => hitAreaFrames.visible = checked);
+    }
+
+    function checkbox(name, onChange) {
+        const id = name.replace(/\W/g, "").toLowerCase();
+
+        let checkbox = document.getElementById(id);
+
+        if (!checkbox) {
+            const p = document.createElement("p");
+            p.innerHTML = `<input type="checkbox" id="${id}"> <label for="${id}">${name}</label>`;
+
+            document.getElementById("control").appendChild(p);
+            checkbox = p.firstChild;
+        }
+
+        checkbox.addEventListener("change", () => {
+            onChange(checkbox.checked);
+        });
+
+        onChange(checkbox.checked);
+    }
+</script>
