--- a/2.html
+++ b/2.html
@@ -1,15 +1,15 @@
 <!-- Copyrighted cubism SDK -->
 <!-- <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script> -->
-<script src="live2d/live2dcubismcore.min.js"></script>
+<script src="/asset/live2dcubismcore.min.js"></script>
 <!-- Load Pixi (dependency for cubism 2/4 integrated loader) -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/pixi.js@5.3.6/dist/pixi.min.js"></script> -->
-<script src="live2d/pixi.min.js"></script>
+<script src="/asset/pixi.min.js"></script>
 <!-- Load cubism 4 integrated loader -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.3.1/dist/cubism4.min.js"></script> -->
-<script src="live2d/cubism4.min.js"></script>
+<script src="/asset/cubism4.min.js"></script>
 
 <!-- Load pio and alternative loader -->
 <link href="live2d/pio.css" rel="stylesheet" type="text/css" />
-<script src="live2d/pio.js"></script>
+<script src="/pio.js"></script>
 <script src="live2d/pio_sdk4.js"></script>
 <script src="live2d/load.js"></script>
