--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <script>
         const initConfig = {
+            hidden: false,
             model: [
                 "live2d/model/xxb/kesshouban_v1.1.model3.json", 
                 "live2d/model/Diana/Diana.model3.json"
