🔖 Perform basic functions

--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
     <script src="/poster_girl.js"></script>
 
     <script>
-        const initConfig = {
-            hidden: false,
-            model: [
-                "live2d/model/xxb/kesshouban_v1.1.model3.json", 
-                "live2d/model/Diana/Diana.model3.json"
-            ]
-        }
-        new Paul_Pio(initConfig)
+        new Paul_Pio('platelet-tips.json')
     </script>
 
 </body>
