🚚 del and move  code

--- a/index.html
+++ b/index.html
@@ -1,30 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <link href="live2d/pio.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live2d-View</title>
 </head>
 
 <body>
-
-
-
-    <!-- Copyrighted cubism SDK -->
-    <!-- <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script> -->
-    <script src="/asset/live2dcubismcore.min.js"></script>
-    <!-- Load Pixi (dependency for cubism 2/4 integrated loader) -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/pixi.js@5.3.6/dist/pixi.min.js"></script> -->
-    <script src="/asset/pixi.min.js"></script>
-    <!-- Load cubism 4 integrated loader -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.3.1/dist/cubism4.min.js"></script> -->
-    <script src="/asset/cubism4.min.js"></script>
-
-    <!-- Load pio and alternative loader -->
-    <script src="/poster_girl.js"></script>
-
-    <script>
-        new Paul_Pio('platelet-tips.json')
-    </script>
-
+    <script src="/autoload.js"></script>
 </body>
 
 </html>
